playground/test3/y.output

state 0
	$accept: .start $end 

	ID  shift 4
	.  error

	expr  goto 2
	object  goto 3
	start  goto 1

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  expr.    (1)

	.  reduce 1 (src line 49)


state 3
	expr:  object.'=' object 

	'='  shift 5
	.  error


state 4
	object:  ID.'.' ATTR 

	'.'  shift 6
	.  error


state 5
	expr:  object '='.object 

	ID  shift 4
	.  error

	object  goto 7

state 6
	object:  ID '.'.ATTR 

	ATTR  shift 8
	.  error


state 7
	expr:  object '=' object.    (2)

	.  reduce 2 (src line 57)


state 8
	object:  ID '.' ATTR.    (3)

	.  reduce 3 (src line 64)


7 terminals, 4 nonterminals
4 grammar rules, 9/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
53 working sets used
memory: parser 3/120000
3 extra closures
5 shift entries, 1 exceptions
4 goto entries
0 entries saved by goto default
Optimizer space used: output 9/120000
9 table entries, 1 zero
maximum spread: 7, maximum offset: 7
